# amplitude-component

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  amplitude.js  analytics.wit  edgee-component.toml  flake.nix  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: check.yml  wasm-build-release.yml
src/: amplitude_payload.rs  lib.rs
wit/: deps.toml  protocols.wit  world.wit
