[package]
name = "amplitude-component"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.5.4", default-features=false }
wit-bindgen = "0.41.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.17"
pretty_assertions = "1.4.1"
uuid = { version = "1.17.0", features = ["v4"] }
